# KotlinMVPDemo

./: .gitignore  DesignPatterns  Gradle构建.md  build.gradle  config.gradle  gradle.properties  knowledgePoints  settings.gradle  tabgroups_data_20230804.json  抽象类和接口的异同  文档_Android动画  文档_Canvas类  文档_Canvas类_Path  文档_NDK开发  文档_安卓架构  文档_录屏  文档_抽象类和接口的异同  文档_设计模式  文档_设计模式.md  文档_贝塞尔曲线
DaggerMVPActivity/: recipe.xml.ftl  template.xml
DaggerMVPActivity/root/src/app_package/: ProductFlavorsActivityScope.kt.ftl  ProductFlavorsComponet.kt.ftl  ProductFlavorsModule.kt.ftl  ProductFlavorsPresenter.kt.ftl  TestProductFlavorsActivity.kt.ftl
KotlinMPVDemoActivity/: recipe.xml.ftl  template.xml
KotlinMPVDemoActivity/root/src/app_package/: ProductFlavorsActivityScope.kt.ftl  ProductFlavorsComponet.kt.ftl  ProductFlavorsModule.kt.ftl  ProductFlavorsPresenter.kt.ftl  ProductFlavorsView.kt.ftl  TestProductFlavorsActivity.kt.ftl
MVPActivity/: recipe.xml.ftl  template.xml
MVPActivity/root/src/app_package/: ProductFlavorsView.kt.ftl
UniversalMPVActivity/: recipe.xml.ftl  template.xml
UniversalMPVActivity/root/src/app_package/: ProductFlavorsPresenter.kt.ftl  ProductFlavorsView.kt.ftl  TestProductFlavorsActivity.kt.ftl
UniversalMPVFragment/: recipe.xml.ftl  template.xml
UniversalMPVFragment/root/src/app_package/: OneFragment.kt.ftl  OneFragmentPresenter.kt.ftl  (+1 more)
app/: and_res_guard.gradle  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  HelloJNI.c  native-lib.cpp  native-lib2.cpp  tools.cpp  tools.h
baselibrary/: build.gradle
baselibrary/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
kotlinMVPDemoFragment/: recipe.xml.ftl  template.xml
signing/: kotlinmvp.jks  kx11g.jks
testlibrary/: build.gradle
testlibrary/src/main/: AndroidManifest.xml
(+402 files in other folders)
